--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation "com.github.parse-community.Parse-SDK-Android:parse:1.24.1"
+    implementation 'com.github.Shashank02051997:FancyToast-Android:0.1.6'
 }
